# muffin-peewee-aio

./: .bumpversion.cfg  .git-commits.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  release.yml  tests.yml
example/: __init__.py  models.py  views.py
example/migrations/: 000_initial.py
muffin_peewee/: __init__.py  fields.py  migrations.py  types.py
requirements/: requirements-tests.txt  requirements.txt
tests/: conftest.py  test_asyncpg.py  test_base.py  test_fields.py  test_middleware.py  test_migrate.py  test_sqlite.py  test_utils.py
