[project]
name = "muffin-peewee-aio"
version = "1.5.1"
description = "Peewee-AIO integration for Muffin framework"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
keywords = ["peewee", "sql", "orm", "asyncio", "muffin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
]
dependencies = ["muffin", "peewee>=3,<4", "peewee-aio", "peewee-migrate>=1,<2"]

[project.optional-dependencies]
aiopg = ["aiopg"]
asyncpg = ["asyncpg"]
aiomysql = ["aiomysql"]
aiosqlite = ["aiosqlite"]

[project.urls]
Homepage = "https://github.com/klen/muffin-peewee"
Repository = "https://github.com/klen/muffin-peewee"

[dependency-groups]
dev = [
  "pytest",
  "pytest-aio",
  "aiosqlite",
  "uvicorn",
  "ruff",
  "pre-commit",
  "pendulum",
  "pyrefly>=0.52.0",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["muffin_peewee"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-xsv"
log_cli = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313

[testenv]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.pyrefly]
project-includes = ["muffin_peewee"]

[tool.ruff]
include = ["muffin_peewee", "tests"]
exclude = ["example"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
exclude = [".venv", "docs", "example"]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "TRY",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.bumpversion]
current_version = "1.5.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
