[wheel]
python-tag = py3

[metadata]
name = muffin-peewee-aio
version = attr: muffin_peewee.__version__
url = https://github.com/klen/muffin-peewee-aio
description = Peewee integration for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, sql, asyncio, muffin
project_urls = 
    Documentation = https://github.com/klen/muffin-peewee-aio
    Source code = https://github.com/klen/muffin-peewee-aio
    Issue tracker = https://github.com/klen/muffin-peewee-aio/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO

[options]
packages = muffin_peewee
include_package_data = True
python_requires = >= 3.7
install_requires = 
    muffin          >= 0.83
    peewee          >= 3
    peewee-aio      >= 0.0.19
    peewee-migrate  >= 1.4.3

[options.extras_require]
postgresql =
    peewee-aio[postgresql]
mysql =
    peewee-aio[mysql]
sqlite =
    peewee-aio[sqlite]
tests = 
    pytest
    pytest-aio
    pytest-mypy
    aiosqlite
    uvicorn
build = 
    bump2version
    wheel

[pylama]
linters = pep8,pyflakes,mccabe,pep257
ignore = D211,D213

[pylama:pycodestyle]
max_line_length = 100

[pylama:setup.py]
ignore = D

[pylama:tests/*.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy
log_cli = True

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest tests

[mypy]
ignore_missing_imports = True
